<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="MAIN" Id="{cbd6c4bf-6373-4be1-b0b1-5f6d9871d58c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	enclaveStart: BOOL;
	cintaRemoveVision: BOOL;
	cintaBascula: BOOL;
	cintaPostBascula: BOOL;
	cintaRemoveBascula: BOOL;
	cintaVision: BOOL;
	timerVision: TON;
	cintaBasculaPositivo:bool;
	
	descarteXcolor: BOOL;
	cilindroVision: BOOL;
	cintaDescarteVision: BOOL;
	timerBascula: TON;
	descarteXpeso: BOOL;
	cilindroBascula: BOOL;
	cintaDescarteBascula: BOOL;
	startTimerVision: BOOL;
	cintaBasculaNegativo: BOOL;
	difusoVisionAnt: bool;
	descartando: BOOL;
	flancAnteriorCilindroVision : F_TRIG;
	flancoCintaDescarte : F_TRIG;
	descratandoXpeso: BOOL;
	startTimerBascula: BOOL;
	flancoCintaDescarteBascula: F_TRIG;
	flancAnteriorCilindroBascula: F_TRIG;
	luzStart: BOOL;
	luzVerde: BOOL;
	luzAmarilla: BOOL;
	luzRoja: BOOL;
	luzStop: BOOL;
	luzReset: BOOL;
	emergencia: BOOL;
	objetoPosicionDescarteV: BOOL;
	objetoPosicionDescarteP: BOOL;
	peso: REAL;
	sinComparar: BOOL := false;
	azul: BOOL;
	metal: BOOL;
	verde: BOOL;
	modoManual: BOOL;
	modoAuto : bool;
	renudar: BOOL := TRUE;
	flancoSalidaVision : F_TRIG;
	flancoAscendenteVision : R_TRIG;
	flancoSensorFinal: F_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*

1 - Si se pulsa strart -> enclave y arranque de cintas
  -	** Si se pulsa stop -> parar toda la secuencia
  
2 - Si se detecta en el sensor fotoelectrico de vision
	* Se para esa cinta 2 segundos
	* Se cogen las caracteristicas del objeto
		- Base azul : 3
		- Base verde : 6
		- Base metal : 9
	* En caso de descarte 
		- Se para cinta con el sensor delanterio del cilindro
		- Se acciona el cilindro
		- Se activa la cinta de descarte con el sensor fotoelectrico 
		  ( el tiempo de activo se sabe por vel y distancia x.ej)
 
3 - Si se detecta objeto en la cinta de pesaje (sensor fotoelectrico)
	* Se para la cinta 2 segundos
	* Se cogen als caracteristicas del objeto
		- Bases verde / azul : 7 kg
		- Base metalica : 9 kg
	* En caso de descarte
		--- Repetir proceso anterior

4 - Actualizar salidas

*)

// ------------------- PASO 1  Botones Cuadro -------------------

luzStart := FALSE;
luzStop := FALSE;
luzReset := FALSE; 

IF GVLvars.botonStart AND NOT emergencia THEN
	enclaveStart := TRUE;
	cintaVision := TRUE;
	//cintaBascula := TRUE;
	//cintaPostBascula := TRUE;
	luzStart := TRUE; 
	luzVerde := TRUE;
	luzAmarilla := FALSE;
	luzRoja := FALSE;
END_IF

IF NOT GVLvars.botonStop AND NOT emergencia THEN
	enclaveStart := FALSE;
	cintaVision := FALSE;
	cintaRemoveVision := FALSE;
	cintaBascula := FALSE;
	cintaPostBascula := FALSE;
	cintaRemoveBascula 	:= FALSE;
	cilindroVision := FALSE;
	cilindroBascula := FALSE;
	luzStop := TRUE; 
	luzVerde := FALSE;
	luzAmarilla := TRUE;
	luzRoja := FALSE;
END_IF



IF NOT GVLvars.setaEmergencia THEN
	enclaveStart := FALSE;
	cintaVision := FALSE;
	cintaRemoveVision := FALSE;
	cintaBascula := FALSE;
	cintaPostBascula := FALSE;
	cintaRemoveBascula 	:= FALSE;
	cilindroVision := FALSE;
	cilindroBascula := FALSE;
	luzStop := FALSE; 
	luzVerde := FALSE;
	luzAmarilla := FALSE;
	luzRoja := TRUE;
	emergencia := TRUE;
	//luzReset := TRUE;
END_IF


IF GVLvars.setaEmergencia AND emergencia THEN
	IF GVLvars.botonReset THEN
		enclaveStart := TRUE;
		luzStop := FALSE; 
		luzVerde := TRUE;
		luzAmarilla := FALSE;
		luzRoja := FALSE;
		emergencia := FALSE;
		luzReset := TRUE;
		cintaVision := TRUE;
		cintaRemoveVision := TRUE;
		cintaBascula := TRUE;
		cintaPostBascula := TRUE;
		cintaRemoveBascula 	:= TRUE;
	END_IF
END_IF

IF GVLvars.modoManual THEN
	modoManual := TRUE;
	modoAuto := FALSE;
END_IF

IF GVLvars.modoAuto THEN
	modoManual := FALSE;
	modoAuto := TRUE;
END_IF


// ------------------- PASO 2 - Filtro Vision -------------------
IF enclaveStart AND NOT emergencia  THEN
	
	
	flancoAscendenteVision(CLK:=GVLvars.sDifusoVision);
	// Detectar flanco ascendente solo una vez por detección
	//IF GVLvars.sDifusoVision AND NOT difusoVisionAnt THEN
	IF flancoAscendenteVision.Q THEN
		startTimerVision := TRUE;  // Arranca el temporizador solo una vez por evento
		cintaVision := FALSE; // Se para la cinta
	END_IF
	difusoVisionAnt := GVLvars.sDifusoVision;
		
	
	timerVision(IN:=startTimerVision, PT:=T#2S);
	IF timerVision.Q THEN
		startTimerVision:=FALSE;
		// Si es color azul o metalica continua 
		IF GVLvars.sVision = 3 OR GVLvars.sVision = 9 THEN
			descarteXcolor := FALSE;
		// Se descarta la base
		ELSE
			descarteXcolor := TRUE;
		END_IF
		azul := GVLvars.sVision = 3;
		metal := GVLvars.sVision = 9;
		verde := GVLvars.sVision = 6;
		cintaVision := TRUE; // Reanuda la marcha
		
	END_IF
	
	// Si hay que descratar y se detecta objeto delante del cilindro
	IF descarteXcolor AND GVLvars.sCilindroVision THEN
		descartando := TRUE;
	END_IF
	
	flancAnteriorCilindroVision(CLK := GVLvars.sCilindroVision);
	flancoCintaDescarte(CLK := GVLvars.sDifusoRemoveVision);
	
	// Si tenemos que descartar y el objeto para el sensor (se situa el objeto en frente del cilindro)
	IF descartando = TRUE  AND  flancAnteriorCilindroVision.Q  THEN
		objetoPosicionDescarteV:=TRUE;
	END_IF
	
	
	IF objetoPosicionDescarteV THEN	
		cintaVision := FALSE;
		cilindroVision := TRUE;
		cintaRemoveVision := TRUE;	
	END_IF
	
	flancoSalidaVision(CLK:=GVLvars.sSalidaCintaVision);
	//Si el material ya salio de la cintas de vision esta se para
	IF GVLvars.sSalidaCintaVision THEN
		cintaVision := FALSE;
		cintaBascula := TRUE;
	END_IF

	// si e objeto ya esta en la cinta de descarte se reanuda con la de vision
	IF flancoCintaDescarte.Q  THEN 
		cintaVision := true;
		cilindroVision := FALSE;	
		descartando := FALSE;
		cintaRemoveVision := FALSE;
		objetoPosicionDescarteV := FALSE;
		
		IF modoManual THEN
			enclaveStart := FALSE;
		END_IF
		
	END_IF

	
	
// ------------------ PASO 3 - Filtro peso -------------------

	
	
	IF GVLvars.sDifusoBascula THEN
		cintaVision := FALSE;
		startTimerBascula := TRUE;  // Igual que el timer de vision: arranca el temporizador solo una vez
		cintaBascula := FALSE; // Se para la cinta
	END_IF
	
	timerBascula(IN:=startTimerBascula, PT:=T#2S);
	
	IF timerBascula.Q AND sinComparar = FALSE THEN
		startTimerBascula := FALSE;
		peso := GVLvars.pesoBascula;
		// Si el peso es mayor de un umbral se descarta
		cintaBascula := TRUE; // Reanuda la marcha
		cintaPostBascula := TRUE;
		sinComparar := TRUE;
	END_IF
	
	IF  peso > 4 THEN
		descarteXpeso := TRUE;
		sinComparar := FALSE;
	ELSE
		descarteXpeso := FALSE;
		sinComparar := FALSE;
	END_IF
		
	// Si hay que descartar y se detecta objeto delante del cilindro
	IF descarteXpeso AND GVLvars.sCilindroBascula THEN
		descratandoXpeso := TRUE;
	END_IF
	
	flancAnteriorCilindroBascula(CLK := GVLvars.sCilindroBascula);
	flancoCintaDescarteBascula(CLK := GVLvars.sDifusoRemovePeso);
	
	// Si tenemos que descartar y el objeto para el sensor
	IF descratandoXpeso = TRUE AND flancAnteriorCilindroBascula.Q THEN
		objetoPosicionDescarteP:=TRUE;
	END_IF

	IF objetoPosicionDescarteP THEN
		cintaBascula := FALSE;
		cintaPostBascula := FALSE;
		cilindroBascula := TRUE;
		cintaRemoveBascula := TRUE;
		
	END_IF

	// Si el material no se descarto y llego al final de la cinta se para esta
	flancoSensorFinal(CLK:= GVLvars.sRemoveFinal);
	IF flancoSensorFinal.Q THEN
		cintaPostBascula := FALSE;
		cintaVision := TRUE;
		IF modoManual THEN
			enclaveStart := FALSE;			
		END_IF
		
	END_IF

	
	// si el objeto ya esta en la cinta de descarte
	IF flancoCintaDescarteBascula.Q THEN
		cilindroBascula := FALSE;
		descratandoXpeso := FALSE;
		descarteXpeso := FALSE;
		cintaRemoveBascula := FALSE;
		objetoPosicionDescarteP := FALSE;
		cintaVision := TRUE;
		IF modoManual THEN
			enclaveStart := FALSE;			
		END_IF
		
	END_IF

ELSE
	cintaVision := FALSE;
	cintaBascula := FALSE;
	cintaPostBascula := FALSE;
	

END_IF


// ----------------- PASO 4 ------------------

// Cintas
GVLvars.cintaBascula := cintaBascula;
GVLvars.cintaPostBascula := cintaPostBascula;
GVLvars.cintaRemoveBascula := cintaRemoveBascula;
GVLvars.cintaRemoveVision := cintaRemoveVision;
GVLvars.cintaVision := cintaVision;

// Cilindros
GVLvars.cilindroBascula := cilindroBascula;
GVLvars.cilindroVision := cilindroVision;

// Cuadro
GVLvars.luzAmarilla := luzAmarilla;
GVLvars.luzRoja := luzRoja;
GVLvars.luzVerde := luzVerde;
GVLvars.luzBotonStop := luzStop;
GVLvars.luzBotonStart := luzStart;





]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="967" Count="103" />
      <LineId Id="1228" Count="0" />
      <LineId Id="1230" Count="0" />
      <LineId Id="1229" Count="0" />
      <LineId Id="1071" Count="4" />
      <LineId Id="1232" Count="0" />
      <LineId Id="1231" Count="0" />
      <LineId Id="1076" Count="1" />
      <LineId Id="1269" Count="0" />
      <LineId Id="1078" Count="4" />
      <LineId Id="1270" Count="0" />
      <LineId Id="1086" Count="19" />
      <LineId Id="1107" Count="7" />
      <LineId Id="1116" Count="7" />
      <LineId Id="1259" Count="0" />
      <LineId Id="1265" Count="1" />
      <LineId Id="1260" Count="1" />
      <LineId Id="1267" Count="0" />
      <LineId Id="1262" Count="0" />
      <LineId Id="1124" Count="2" />
      <LineId Id="1283" Count="0" />
      <LineId Id="1128" Count="3" />
      <LineId Id="1277" Count="0" />
      <LineId Id="1237" Count="2" />
      <LineId Id="1132" Count="9" />
      <LineId Id="1240" Count="0" />
      <LineId Id="1142" Count="10" />
      <LineId Id="1252" Count="0" />
      <LineId Id="1153" Count="24" />
      <LineId Id="1276" Count="0" />
      <LineId Id="1178" Count="4" />
      <LineId Id="1255" Count="0" />
      <LineId Id="1183" Count="0" />
      <LineId Id="1271" Count="0" />
      <LineId Id="1184" Count="0" />
      <LineId Id="1253" Count="0" />
      <LineId Id="1274" Count="0" />
      <LineId Id="1257" Count="1" />
      <LineId Id="1256" Count="0" />
      <LineId Id="1273" Count="0" />
      <LineId Id="1254" Count="0" />
      <LineId Id="1185" Count="2" />
      <LineId Id="1189" Count="0" />
      <LineId Id="1248" Count="3" />
      <LineId Id="1246" Count="0" />
      <LineId Id="1275" Count="0" />
      <LineId Id="1241" Count="2" />
      <LineId Id="1195" Count="3" />
      <LineId Id="1281" Count="1" />
      <LineId Id="1278" Count="0" />
      <LineId Id="1280" Count="0" />
      <LineId Id="1199" Count="27" />
      <LineId Id="6" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>